<resources>
    <string name="app_name">Goniknown</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment start</string>
    <string name="help_blank_fragment">Hello blank fragment help</string>
    <string name="about_blank_fragment">Hello blank fragment about</string>
    <string name="help_title">Help</string>
    <string name="about_title">About the app</string>
    <string name="start_bottom_title_rus">Справочник</string>
    <string name="map_bottom_title_rus">Карта</string>
    <string name="profile_bottom_title_rus">Профиль</string>
    <string name="drawer_list">Справочник</string>
    <string name="about_fragment_text">About fragment text</string>
    <string name="help_fragment_text">Help fragment text</string>
    <string name="map_fragment_text">Map fragment text</string>
    <string name="profile_fragment_text">Profile fragment text</string>
    <string name="start_fragment_text">Start fragment text</string>
    <string name="drawer_main_text">Основной справочник</string>
    <string name="map_drawer_text">Карта</string>
    <string name="profile_drawer_text">Ваш профиль</string>
    <string name="help_drawer_text">Поддержка</string>
    <string name="about_drawer_text">О программе</string>
</resources>