<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/drawer_list">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/startFragment"
                    android:icon="@android:drawable/ic_menu_info_details"
                    android:title="@string/drawer_main_text"/>

                <item
                    android:id="@+id/mapFragment"
                    android:icon="@android:drawable/ic_dialog_map"
                    android:title="@string/map_drawer_text"/>

            </group>
        </menu>
    </item>

    <item android:title="Поддержка">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/profileFragment"
                    android:icon="@android:drawable/btn_star"
                    android:title="@string/profile_drawer_text"/>

                <item
                    android:id="@+id/helpFragment"
                    android:icon="@android:drawable/ic_menu_help"
                    android:title="@string/help_drawer_text"/>

                <item
                    android:id="@+id/aboutFragment"
                    android:icon="@android:drawable/ic_menu_agenda"
                    android:title="@string/about_drawer_text"/>
            </group>
        </menu>
    </item>
</menu>